force-app/main/default/objects/Opportunity/fields/Accessories__c.field-meta.xml
<CustomField>
    <fullName>Accessories__c</fullName>
    <inlineHelpText>Select accessories for this opportunity</inlineHelpText>
    <label>Accessories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EDS</fullName>
            </value>
            <value>
                <fullName>EBSD</fullName>
            </value>
            <value>
                <fullName>CL</fullName>
            </value>
            <value>
                <fullName>Cryo stage</fullName>
            </value>
            <value>
                <fullName>Cool stage</fullName>
            </value>
            <value>
                <fullName>Heating stage</fullName>
            </value>
            <value>
                <fullName>Tensile stage</fullName>
            </value>
            <value>
                <fullName>WDS</fullName>
            </value>
            <value>
                <fullName>uXRF</fullName>
            </value>
            <value>
                <fullName>EBIC</fullName>
            </value>
            <value>
                <fullName>STEM</fullName>
            </value>
            <value>
                <fullName>Chamber cleaner</fullName>
            </value>
            <value>
                <fullName>Raman</fullName>
            </value>
            <value>
                <fullName>CLEM (integrated)</fullName>
            </value>
            <value>
                <fullName>CLEM (transfer)</fullName>
            </value>
            <value>
                <fullName>3View</fullName>
            </value>
            <value>
                <fullName>Ionic Liquid</fullName>
            </value>
            <value>
                <fullName>STEM corrector</fullName>
            </value>
            <value>
                <fullName>TEM corrector</fullName>
            </value>
            <value>
                <fullName>Monochromator</fullName>
            </value>
            <value>
                <fullName>Precession diffraction</fullName>
            </value>
            <value>
                <fullName>EELS</fullName>
            </value>
            <value>
                <fullName>GIF</fullName>
            </value>
            <value>
                <fullName>Tomography</fullName>
            </value>
            <value>
                <fullName>Standard PP</fullName>
            </value>
            <value>
                <fullName>High Res PP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>