force-app/main/default/objects/Opportunity/fields/Accounting_Classification__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Classification__c</fullName>
    <label>計上区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>計上</fullName>
            </value>
            <value>
                <fullName>未計上</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>