force-app/main/default/objects/Opportunity/fields/AddUpKijun__c.field-meta.xml
<CustomField>
    <fullName>AddUpKijun__c</fullName>
    <label>計上基準</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A1</fullName>
            </value>
            <value>
                <fullName>B1</fullName>
            </value>
            <value>
                <fullName>C1</fullName>
            </value>
            <value>
                <fullName>D1</fullName>
            </value>
            <value>
                <fullName>E1</fullName>
            </value>
            <value>
                <fullName>F1</fullName>
            </value>
            <value>
                <fullName>G1</fullName>
            </value>
            <value>
                <fullName>A1：出荷基準</fullName>
            </value>
            <value>
                <fullName>B1：通関/船積基準</fullName>
            </value>
            <value>
                <fullName>C1：据付完了基準</fullName>
            </value>
            <value>
                <fullName>D1：検収/リース基準（DDP・DDU）</fullName>
            </value>
            <value>
                <fullName>E1：工事進行基準</fullName>
            </value>
            <value>
                <fullName>F1：期間計上基準（レンタル・保守）</fullName>
            </value>
            <value>
                <fullName>G1：役務基準（作業のみ）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>