force-app/main/default/objects/Opportunity/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>代理店</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>notEqual</operation>
            <value>S.I.navi,医用・アジア_病院(HTD)</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>商談</relationshipLabel>
    <relationshipName>op01</relationshipName>
    <type>Lookup</type>
</CustomField>