force-app/main/default/objects/Opportunity/fields/AgencyCode__c.field-meta.xml
<CustomField>
    <fullName>AgencyCode__c</fullName>
    <label>代理店コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>