force-app/main/default/objects/Opportunity/fields/AmountA__c.field-meta.xml
<CustomField>
    <fullName>AmountA__c</fullName>
    <label>受注金額</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>