force-app/main/default/objects/Opportunity/fields/ApexAccessRestriction__c.field-meta.xml
<CustomField>
    <fullName>ApexAccessRestriction__c</fullName>
    <formula>$Setup.ProfileConfig__c.ApexAccessRestriction__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>アドオン機能アクセス制限</label>
    <type>Checkbox</type>
</CustomField>