force-app/main/default/objects/Opportunity/fields/application__c.field-meta.xml
<CustomField>
    <fullName>application__c</fullName>
    <label>アプリケーション</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Source Laser</fullName>
            </value>
            <value>
                <fullName>Tunable Laser</fullName>
            </value>
            <value>
                <fullName>Pump Laser</fullName>
                <label>Pump laser</label>
            </value>
            <value>
                <fullName>LN Modulator</fullName>
            </value>
            <value>
                <fullName>Sensor</fullName>
            </value>
            <value>
                <fullName>LiDAR</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Unknown/Others</fullName>
            </value>
            <value>
                <fullName>Access/Mobile</fullName>
                <isActive>false</isActive>
                <label>Access/Mobile</label>
            </value>
            <value>
                <fullName>Data center</fullName>
                <isActive>false</isActive>
                <label>Data center</label>
            </value>
            <value>
                <fullName>ICR</fullName>
                <isActive>false</isActive>
                <label>ICR</label>
            </value>
            <value>
                <fullName>ITLA</fullName>
                <isActive>false</isActive>
                <label>ITLA</label>
            </value>
            <value>
                <fullName>Industrial</fullName>
                <isActive>false</isActive>
                <label>Industrial</label>
            </value>
            <value>
                <fullName>Other Telecom</fullName>
                <isActive>false</isActive>
                <label>Other Telecom</label>
            </value>
            <value>
                <fullName>Others</fullName>
                <isActive>false</isActive>
                <label>Others</label>
            </value>
            <value>
                <fullName>Science</fullName>
                <isActive>false</isActive>
                <label>Science</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>