force-app/main/default/objects/Opportunity/fields/Area1__c.field-meta.xml
<CustomField>
    <fullName>Area1__c</fullName>
    <label>分野 (1)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100</fullName>
                <label>100:在庫（顧客未定）</label>
            </value>
            <value>
                <fullName>101</fullName>
                <label>101:官公庁・大学：直接契約</label>
            </value>
            <value>
                <fullName>102</fullName>
                <label>102:官公庁・大学：代理店契約</label>
            </value>
            <value>
                <fullName>103</fullName>
                <label>103:民間企業：直接契約</label>
            </value>
            <value>
                <fullName>104</fullName>
                <label>104:民間企業：代理店契約</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>