force-app/main/default/objects/Opportunity/fields/Area2__c.field-meta.xml
<CustomField>
    <fullName>Area2__c</fullName>
    <label>分野 (2)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100</fullName>
                <label>100:在庫</label>
            </value>
            <value>
                <fullName>101</fullName>
                <label>101:半導体向け</label>
            </value>
            <value>
                <fullName>102</fullName>
                <label>102:自動車向け</label>
            </value>
            <value>
                <fullName>103</fullName>
                <label>103:自動車向け（電池・触媒）</label>
            </value>
            <value>
                <fullName>104</fullName>
                <label>104:自動車向け（電子部品）</label>
            </value>
            <value>
                <fullName>105</fullName>
                <label>105:自動車向け以外（電池・触媒）</label>
            </value>
            <value>
                <fullName>106</fullName>
                <label>106:自動車向け以外（電子部品）</label>
            </value>
            <value>
                <fullName>107</fullName>
                <label>107:医療・バイオ向け</label>
            </value>
            <value>
                <fullName>108</fullName>
                <label>108:受託分析・共通機器室向け</label>
            </value>
            <value>
                <fullName>109</fullName>
                <label>109:その他</label>
            </value>
            <value>
                <fullName>200</fullName>
                <label>200:研究・開発</label>
            </value>
            <value>
                <fullName>201</fullName>
                <label>201:品管・保全・製造</label>
            </value>
            <value>
                <fullName>202</fullName>
                <label>202:分析センタ・受託</label>
            </value>
            <value>
                <fullName>203</fullName>
                <label>203:教育（研究用途とは分離）</label>
            </value>
            <value>
                <fullName>204</fullName>
                <label>204:在庫</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>