force-app/main/default/objects/Opportunity/fields/Area3__c.field-meta.xml
<CustomField>
    <fullName>Area3__c</fullName>
    <label>分野 (3)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100</fullName>
                <label>100:在庫（顧客未定）</label>
            </value>
            <value>
                <fullName>101</fullName>
                <label>101:半導体・半導体製造装置</label>
            </value>
            <value>
                <fullName>102</fullName>
                <label>102:電池</label>
            </value>
            <value>
                <fullName>103</fullName>
                <label>103:電子部品</label>
            </value>
            <value>
                <fullName>104</fullName>
                <label>104:光学部材(ガラス/レンズ/ミラー/水晶)</label>
            </value>
            <value>
                <fullName>105</fullName>
                <label>105:ナノ材料・カーボン</label>
            </value>
            <value>
                <fullName>106</fullName>
                <label>106:セラミックス</label>
            </value>
            <value>
                <fullName>107</fullName>
                <label>107:メッキ・塗料・顔料</label>
            </value>
            <value>
                <fullName>108</fullName>
                <label>108:ポリマー・有機材料・フィルム</label>
            </value>
            <value>
                <fullName>109</fullName>
                <label>109:金属</label>
            </value>
            <value>
                <fullName>110</fullName>
                <label>110:岩石・鉱物・土壌</label>
            </value>
            <value>
                <fullName>111</fullName>
                <label>111:紙・繊維・印刷物</label>
            </value>
            <value>
                <fullName>112</fullName>
                <label>112:医薬品・製薬</label>
            </value>
            <value>
                <fullName>113</fullName>
                <label>113:食品・飲料・農林水産物</label>
            </value>
            <value>
                <fullName>114</fullName>
                <label>114:化粧品</label>
            </value>
            <value>
                <fullName>115</fullName>
                <label>115:生物・病理・解剖・生体材料</label>
            </value>
            <value>
                <fullName>116</fullName>
                <label>116:臨床・病院</label>
            </value>
            <value>
                <fullName>117</fullName>
                <label>117:自動車・航空・宇宙</label>
            </value>
            <value>
                <fullName>118</fullName>
                <label>118:環境・リサイクル（産廃）</label>
            </value>
            <value>
                <fullName>119</fullName>
                <label>119:その他</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>