force-app/main/default/objects/Opportunity/fields/Area_Country__c.field-meta.xml
<CustomField>
    <fullName>Area_Country__c</fullName>
    <label>地域 / 国</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>日本</fullName>
            </value>
            <value>
                <fullName>米州</fullName>
            </value>
            <value>
                <fullName>欧州</fullName>
            </value>
            <value>
                <fullName>韓国</fullName>
            </value>
            <value>
                <fullName>台湾</fullName>
            </value>
            <value>
                <fullName>中国</fullName>
            </value>
            <value>
                <fullName>東南アジア</fullName>
            </value>
            <value>
                <fullName>アメリカ</fullName>
            </value>
            <value>
                <fullName>メキシコ</fullName>
            </value>
            <value>
                <fullName>インド</fullName>
            </value>
            <value>
                <fullName>ベトナム</fullName>
            </value>
            <value>
                <fullName>インドネシア</fullName>
            </value>
            <value>
                <fullName>シンガポール</fullName>
            </value>
            <value>
                <fullName>タイ</fullName>
            </value>
            <value>
                <fullName>フィリピン</fullName>
            </value>
            <value>
                <fullName>マレーシア</fullName>
            </value>
            <value>
                <fullName>カタール</fullName>
            </value>
            <value>
                <fullName>チェコ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>