force-app/main/default/objects/Opportunity/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <label>Asset 数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>