force-app/main/default/objects/Opportunity/fields/AssetName__c.field-meta.xml
<CustomField>
    <fullName>AssetName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>作成元</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>商談</relationshipLabel>
    <relationshipName>OppAsset</relationshipName>
    <type>Lookup</type>
</CustomField>