force-app/main/default/objects/Opportunity/fields/authorizedFlgToApproval__c.field-meta.xml
<CustomField>
    <fullName>authorizedFlgToApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>受権票承認申請フラグ</label>
    <type>Checkbox</type>
</CustomField>