force-app/main/default/objects/Opportunity/fields/authorizedNo__c.field-meta.xml
<CustomField>
    <fullName>authorizedNo__c</fullName>
    <label>受権票番号</label>
    <length>30</length>
    <type>Text</type>
</CustomField>