force-app/main/default/objects/Opportunity/fields/b__c.field-meta.xml
<CustomField>
    <fullName>b__c</fullName>
    <description>予算登録時、予算情報のb(リードタイム)を設定する項目（HSL用）</description>
    <label>b</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>