force-app/main/default/objects/Opportunity/fields/BankCharges__c.field-meta.xml
<CustomField>
    <fullName>BankCharges__c</fullName>
    <formula>BankChargesRate__c * TotalCustomerPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>