force-app/main/default/objects/Opportunity/fields/BeforeMakerName__c.field-meta.xml
<CustomField>
    <fullName>BeforeMakerName__c</fullName>
    <description>CAS用項目</description>
    <label>更新前メーカ</label>
    <length>50</length>
    <type>Text</type>
</CustomField>