force-app/main/default/objects/Opportunity/fields/BenefitM__c.field-meta.xml
<CustomField>
    <fullName>BenefitM__c</fullName>
    <formula>Benefit__c/1000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>利益 (M)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>