force-app/main/default/objects/Opportunity/fields/BillingRemark1__c.field-meta.xml
<CustomField>
    <fullName>BillingRemark1__c</fullName>
    <defaultValue>&quot;本費用はJAPAN TESTING LABORATORIES社における技術サービス提供分です。&quot;</defaultValue>
    <label>請求書備考1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>