force-app/main/default/objects/Opportunity/fields/BillingRemark2__c.field-meta.xml
<CustomField>
    <fullName>BillingRemark2__c</fullName>
    <defaultValue>&quot;本件問合せ先：電話 080-8420-3572&quot;</defaultValue>
    <label>請求書備考2</label>
    <length>35</length>
    <type>Text</type>
</CustomField>