force-app/main/default/objects/Opportunity/fields/BillingRemark3__c.field-meta.xml
<CustomField>
    <fullName>BillingRemark3__c</fullName>
    <label>請求書備考3</label>
    <length>35</length>
    <type>Text</type>
</CustomField>