force-app/main/default/objects/Opportunity/fields/Budget_Probability__c.field-meta.xml
<CustomField>
    <fullName>Budget_Probability__c</fullName>
    <inlineHelpText>The probability of budget will be received. Should be 100% once budget has been approved.</inlineHelpText>
    <label>Budget Probability (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>