force-app/main/default/objects/Opportunity/fields/Budget_source__c.field-meta.xml
<CustomField>
    <fullName>Budget_source__c</fullName>
    <inlineHelpText>Where does the budget come from ?</inlineHelpText>
    <label>Budget source</label>
    <length>30</length>
    <type>Text</type>
</CustomField>