force-app/main/default/objects/Opportunity/fields/BudgetAccuracy__c.field-meta.xml
<CustomField>
    <fullName>BudgetAccuracy__c</fullName>
    <label>予算確度</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>KU</fullName>
            </value>
            <value>
                <fullName>KJ</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>他決</fullName>
            </value>
            <value>
                <fullName>消滅</fullName>
            </value>
            <value>
                <fullName>未確認</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>