force-app/main/default/objects/Opportunity/fields/BudgetAddUpFlg__c.field-meta.xml
<CustomField>
    <fullName>BudgetAddUpFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>予算計上フラグ</label>
    <type>Checkbox</type>
</CustomField>