force-app/main/default/objects/Opportunity/fields/BudgetAmount__c.field-meta.xml
<CustomField>
    <fullName>BudgetAmount__c</fullName>
    <description>予算確定した金額を表示</description>
    <label>金額</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>