force-app/main/default/objects/Opportunity/fields/Budgetary_Quote__c.field-meta.xml
<CustomField>
    <fullName>Budgetary_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Budgetary quote provided to the customer.</inlineHelpText>
    <label>Budgetary Quote</label>
    <type>Checkbox</type>
</CustomField>