force-app/main/default/objects/Opportunity/fields/BudgetExpense__c.field-meta.xml
<CustomField>
    <fullName>BudgetExpense__c</fullName>
    <label>予算費目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>