force-app/main/default/objects/Opportunity/fields/BudgetStats__c.field-meta.xml
<CustomField>
    <fullName>BudgetStats__c</fullName>
    <label>予算状況</label>
    <length>255</length>
    <type>Text</type>
</CustomField>