force-app/main/default/objects/Opportunity/fields/BudgetStatus__c.field-meta.xml
<CustomField>
    <fullName>BudgetStatus__c</fullName>
    <description>CAS用項目</description>
    <inlineHelpText>A：予算化確度　81%以上
B：予算化確度　61-80%
C：予算化確度　41-60%
D：予算化確度　21-40%
E：予算化確度　20%以下</inlineHelpText>
    <label>予算状況</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>