force-app/main/default/objects/Opportunity/fields/BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnit__c</fullName>
    <defaultValue>CASE( $User.BusinessUnit__c , 
&quot;01&quot;, &quot;01&quot;,
&quot;02&quot;, &quot;02&quot;,
&quot;03&quot;, &quot;03&quot;,
&quot;04&quot;, &quot;04&quot;,
&quot;05&quot;, &quot;05&quot;,
&quot;&quot;)</defaultValue>
    <label>BusinessUnit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BusinessUnit</valueSetName>
    </valueSet>
</CustomField>