force-app/main/default/objects/Opportunity/fields/CAS_ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>CAS_ExpirationDate__c</fullName>
    <description>非表示項目
レポートに必要 CAS用項目</description>
    <label>有効期限</label>
    <type>Date</type>
</CustomField>