force-app/main/default/objects/Opportunity/fields/Catergory_HHS__c.field-meta.xml
<CustomField>
    <fullName>Catergory_HHS__c</fullName>
    <label>大分類（業態）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>大学</fullName>
            </value>
            <value>
                <fullName>航空/自動車</fullName>
            </value>
            <value>
                <fullName>農業/食品・飲料</fullName>
            </value>
            <value>
                <fullName>バイオテクノロジー</fullName>
            </value>
            <value>
                <fullName>セメント</fullName>
            </value>
            <value>
                <fullName>化学（有機/無機）</fullName>
            </value>
            <value>
                <fullName>分析センタ（民間、環境分析含む）</fullName>
            </value>
            <value>
                <fullName>研究開発機関（官公庁）</fullName>
            </value>
            <value>
                <fullName>検査機関（官公庁）</fullName>
            </value>
            <value>
                <fullName>医療機関</fullName>
            </value>
            <value>
                <fullName>金属/鉱業</fullName>
            </value>
            <value>
                <fullName>石油/ガス</fullName>
            </value>
            <value>
                <fullName>塗料/コーティング</fullName>
            </value>
            <value>
                <fullName>医薬品</fullName>
            </value>
            <value>
                <fullName>ポリマー/プラスチック</fullName>
            </value>
            <value>
                <fullName>半導体/ナノテク</fullName>
            </value>
            <value>
                <fullName>エレクトロニクス</fullName>
            </value>
            <value>
                <fullName>エネルギー（電気/ガス/原子力・火力・水力）</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>