force-app/main/default/objects/Opportunity/fields/Centre_Wavelength_nm__c.field-meta.xml
<CustomField>
    <fullName>Centre_Wavelength_nm__c</fullName>
    <label>Centre Wavelength (nm)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1270</fullName>
            </value>
            <value>
                <fullName>1310</fullName>
            </value>
            <value>
                <fullName>1550</fullName>
            </value>
            <value>
                <fullName>980</fullName>
            </value>
            <value>
                <fullName>1480</fullName>
            </value>
            <value>
                <fullName>Unknown/Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>