force-app/main/default/objects/Opportunity/fields/checkSAPCode__c.field-meta.xml
<CustomField>
    <fullName>checkSAPCode__c</fullName>
    <formula>IF(

AND(
Account.Sold_to_party__c=&apos;&apos;,
Account.Terms_of_payment__c&lt;&gt;&apos;&apos;
),

&apos;取引先に受注先を設定してください&apos;,

IF(

AND(
Account.Sold_to_party__c&lt;&gt;&apos;&apos;,
Account.Terms_of_payment__c=&apos;&apos;
),

&apos;取引先に販売支払条件を設定してください&apos;,

IF(

AND(
Account.Sold_to_party__c=&apos;&apos;,
Account.Terms_of_payment__c=&apos;&apos;
),

&apos;取引先に受注先・販売支払条件を設定してください&apos;,

&apos;受注先・販売支払条件は設定済みです&apos;
)
)
)</formula>
    <label>SAPマスタコード有無</label>
    <type>Text</type>
</CustomField>