force-app/main/default/objects/Opportunity/fields/CO_CurrencyIsoCode_MTE__c.field-meta.xml
<CustomField>
    <fullName>CO_CurrencyIsoCode_MTE__c</fullName>
    <defaultValue>if( $User.Shokusei__c =&apos;T013&apos;,&apos;JPY&apos;,&apos;USD&apos;)</defaultValue>
    <label>SAP Currency ISO Code (MTE)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
                <default>true</default>
                <label>USD</label>
            </value>
            <value>
                <fullName>JPY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>