force-app/main/default/objects/Opportunity/fields/CO_ovcChatter_ID__c.field-meta.xml
<CustomField>
    <fullName>CO_ovcChatter_ID__c</fullName>
    <label>OVC Chatter Feed ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>