force-app/main/default/objects/Opportunity/fields/CO_ovcPostDate__c.field-meta.xml
<CustomField>
    <fullName>CO_ovcPostDate__c</fullName>
    <label>SAP Post Date (STE)</label>
    <type>DateTime</type>
</CustomField>