force-app/main/default/objects/Opportunity/fields/CO_ovcPostDate_MTE__c.field-meta.xml
<CustomField>
    <fullName>CO_ovcPostDate_MTE__c</fullName>
    <label>SAP Post Date (MTE)</label>
    <type>DateTime</type>
</CustomField>