force-app/main/default/objects/Opportunity/fields/CO_ovcPostDateStatus05__c.field-meta.xml
<CustomField>
    <fullName>CO_ovcPostDateStatus05__c</fullName>
    <description>受注伝票ユーザステータス更新日時 - 組立指示</description>
    <label>CO_ovcPostDateStatus05</label>
    <type>DateTime</type>
</CustomField>