force-app/main/default/objects/Opportunity/fields/CO_ovcPostUserStatus__c.field-meta.xml
<CustomField>
    <fullName>CO_ovcPostUserStatus__c</fullName>
    <label>SAP Post User Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E0001</fullName>
            </value>
            <value>
                <fullName>E0002</fullName>
            </value>
            <value>
                <fullName>E0003</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>