force-app/main/default/objects/Opportunity/fields/CO_ovcSAPSalesOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>CO_ovcSAPSalesOrderNumber__c</fullName>
    <label>SAP Sales Order Number (STE)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>