force-app/main/default/objects/Opportunity/fields/CO_ovcUpdateFlag__c.field-meta.xml
<CustomField>
    <fullName>CO_ovcUpdateFlag__c</fullName>
    <label>Update Flag (STE)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>