force-app/main/default/objects/Opportunity/fields/CO_ovcUpdateFlag_MTE__c.field-meta.xml
<CustomField>
    <fullName>CO_ovcUpdateFlag_MTE__c</fullName>
    <formula>IF ( isBlank(CO_SAPSalesOrderNumber_MTE__c), &apos;I&apos;, &apos;U&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Update Flag (MTE)</label>
    <type>Text</type>
</CustomField>